src/parsing/gen/DLParser.cpp
/*
 * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License, version 2.0,
 * as published by the Free Software Foundation.
 *
 * This program is also distributed with certain software (including
 * but not limited to OpenSSL) that is licensed under separate terms, as
 * designated in a particular file or component or in included license
 * documentation. The authors of MySQL hereby grant you an additional
 * permission to link the program and your derivative works with the
 * separately licensed software that they have included with MySQL.
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
 * the GNU General Public License, version 2.0, for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 */


// Generated from src/parsing/DLParser.g4 by ANTLR 4.8


#include "DLParserListener.h"
#include "DLParserVisitor.h"

#include "DLParser.h"




using namespace antlrcpp;
using namespace antlr4;

DLParser::DLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DLParser::~DLParser() {
  delete _interpreter;
}

std::string DLParser::getGrammarFileName() const {
  return "DLParser.g4";
}

const std::vector<std::string>& DLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AryOpContext ------------------------------------------------------------------

DLParser::AryOpContext::AryOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::AryOpContext::PLUS_OPERATOR() {
  return getToken(DLParser::PLUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MINUS_OPERATOR() {
  return getToken(DLParser::MINUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MULT_OPERATOR() {
  return getToken(DLParser::MULT_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::DIV_OPERATOR() {
  return getToken(DLParser::DIV_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::MOD_OPERATOR() {
  return getToken(DLParser::MOD_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::ASSIGN_OPERATOR() {
  return getToken(DLParser::ASSIGN_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::EQUAL_OPERATOR() {
  return getToken(DLParser::EQUAL_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::LOGICAL_AND_OPERATOR() {
  return getToken(DLParser::LOGICAL_AND_OPERATOR, 0);
}

tree::TerminalNode* DLParser::AryOpContext::LOGICAL_OR_OPERATOR() {
  return getToken(DLParser::LOGICAL_OR_OPERATOR, 0);
}


size_t DLParser::AryOpContext::getRuleIndex() const {
  return DLParser::RuleAryOp;
}

void DLParser::AryOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAryOp(this);
}

void DLParser::AryOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAryOp(this);
}


antlrcpp::Any DLParser::AryOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitAryOp(this);
  else
    return visitor->visitChildren(this);
}

DLParser::AryOpContext* DLParser::aryOp() {
  AryOpContext *_localctx = _tracker.createInstance<AryOpContext>(_ctx, getState());
  enterRule(_localctx, 0, DLParser::RuleAryOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    _la = _input->LA(1);
    if (!(((((_la - 383) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 383)) & ((1ULL << (DLParser::ASSIGN_OPERATOR - 383))
      | (1ULL << (DLParser::EQUAL_OPERATOR - 383))
      | (1ULL << (DLParser::PLUS_OPERATOR - 383))
      | (1ULL << (DLParser::MINUS_OPERATOR - 383))
      | (1ULL << (DLParser::MULT_OPERATOR - 383))
      | (1ULL << (DLParser::DIV_OPERATOR - 383))
      | (1ULL << (DLParser::MOD_OPERATOR - 383))
      | (1ULL << (DLParser::LOGICAL_AND_OPERATOR - 383))
      | (1ULL << (DLParser::LOGICAL_OR_OPERATOR - 383)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionListContext ------------------------------------------------------------------

DLParser::ExpressionListContext::ExpressionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DLParser::ExpressionStatementContext *> DLParser::ExpressionListContext::expressionStatement() {
  return getRuleContexts<DLParser::ExpressionStatementContext>();
}

DLParser::ExpressionStatementContext* DLParser::ExpressionListContext::expressionStatement(size_t i) {
  return getRuleContext<DLParser::ExpressionStatementContext>(i);
}

std::vector<tree::TerminalNode *> DLParser::ExpressionListContext::COMMA_SYMBOL() {
  return getTokens(DLParser::COMMA_SYMBOL);
}

tree::TerminalNode* DLParser::ExpressionListContext::COMMA_SYMBOL(size_t i) {
  return getToken(DLParser::COMMA_SYMBOL, i);
}


size_t DLParser::ExpressionListContext::getRuleIndex() const {
  return DLParser::RuleExpressionList;
}

void DLParser::ExpressionListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionList(this);
}

void DLParser::ExpressionListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionList(this);
}


antlrcpp::Any DLParser::ExpressionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitExpressionList(this);
  else
    return visitor->visitChildren(this);
}

DLParser::ExpressionListContext* DLParser::expressionList() {
  ExpressionListContext *_localctx = _tracker.createInstance<ExpressionListContext>(_ctx, getState());
  enterRule(_localctx, 2, DLParser::RuleExpressionList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 408) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 408)) & ((1ULL << (DLParser::OPEN_CURLY_SYMBOL - 408))
      | (1ULL << (DLParser::CONST - 408))
      | (1ULL << (DLParser::IDENTIFIER - 408))
      | (1ULL << (DLParser::QUOTED_STRING - 408)))) != 0)) {
      setState(38);
      expressionStatement();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == DLParser::COMMA_SYMBOL) {
        setState(39);
        match(DLParser::COMMA_SYMBOL);
        setState(40);
        expressionStatement();
        setState(45);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

DLParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DLParser::BlockExpressionContext* DLParser::ExpressionStatementContext::blockExpression() {
  return getRuleContext<DLParser::BlockExpressionContext>(0);
}

DLParser::UnblockExpressionContext* DLParser::ExpressionStatementContext::unblockExpression() {
  return getRuleContext<DLParser::UnblockExpressionContext>(0);
}


size_t DLParser::ExpressionStatementContext::getRuleIndex() const {
  return DLParser::RuleExpressionStatement;
}

void DLParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void DLParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


antlrcpp::Any DLParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

DLParser::ExpressionStatementContext* DLParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, DLParser::RuleExpressionStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DLParser::OPEN_CURLY_SYMBOL: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        blockExpression();
        break;
      }

      case DLParser::CONST:
      case DLParser::IDENTIFIER:
      case DLParser::QUOTED_STRING: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        unblockExpression(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockExpressionContext ------------------------------------------------------------------

DLParser::BlockExpressionContext::BlockExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::BlockExpressionContext::OPEN_CURLY_SYMBOL() {
  return getToken(DLParser::OPEN_CURLY_SYMBOL, 0);
}

DLParser::StatementsContext* DLParser::BlockExpressionContext::statements() {
  return getRuleContext<DLParser::StatementsContext>(0);
}

tree::TerminalNode* DLParser::BlockExpressionContext::CLOSE_CURLY_SYMBOL() {
  return getToken(DLParser::CLOSE_CURLY_SYMBOL, 0);
}


size_t DLParser::BlockExpressionContext::getRuleIndex() const {
  return DLParser::RuleBlockExpression;
}

void DLParser::BlockExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockExpression(this);
}

void DLParser::BlockExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockExpression(this);
}


antlrcpp::Any DLParser::BlockExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitBlockExpression(this);
  else
    return visitor->visitChildren(this);
}

DLParser::BlockExpressionContext* DLParser::blockExpression() {
  BlockExpressionContext *_localctx = _tracker.createInstance<BlockExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, DLParser::RuleBlockExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      match(DLParser::OPEN_CURLY_SYMBOL);
      setState(53);
      statements();
      setState(54);
      match(DLParser::CLOSE_CURLY_SYMBOL);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(56);
      match(DLParser::OPEN_CURLY_SYMBOL);
      setState(57);
      match(DLParser::CLOSE_CURLY_SYMBOL);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnblockExpressionContext ------------------------------------------------------------------

DLParser::UnblockExpressionContext::UnblockExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::UnblockExpressionContext::QUOTED_STRING() {
  return getToken(DLParser::QUOTED_STRING, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::CONST() {
  return getToken(DLParser::CONST, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

std::vector<DLParser::UnblockExpressionContext *> DLParser::UnblockExpressionContext::unblockExpression() {
  return getRuleContexts<DLParser::UnblockExpressionContext>();
}

DLParser::UnblockExpressionContext* DLParser::UnblockExpressionContext::unblockExpression(size_t i) {
  return getRuleContext<DLParser::UnblockExpressionContext>(i);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::MULT_OPERATOR() {
  return getToken(DLParser::MULT_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::DIV_OPERATOR() {
  return getToken(DLParser::DIV_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::PLUS_OPERATOR() {
  return getToken(DLParser::PLUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::MINUS_OPERATOR() {
  return getToken(DLParser::MINUS_OPERATOR, 0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

DLParser::ExpressionListContext* DLParser::UnblockExpressionContext::expressionList() {
  return getRuleContext<DLParser::ExpressionListContext>(0);
}

tree::TerminalNode* DLParser::UnblockExpressionContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}


size_t DLParser::UnblockExpressionContext::getRuleIndex() const {
  return DLParser::RuleUnblockExpression;
}

void DLParser::UnblockExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnblockExpression(this);
}

void DLParser::UnblockExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnblockExpression(this);
}


antlrcpp::Any DLParser::UnblockExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitUnblockExpression(this);
  else
    return visitor->visitChildren(this);
}


DLParser::UnblockExpressionContext* DLParser::unblockExpression() {
   return unblockExpression(0);
}

DLParser::UnblockExpressionContext* DLParser::unblockExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  DLParser::UnblockExpressionContext *_localctx = _tracker.createInstance<UnblockExpressionContext>(_ctx, parentState);
  DLParser::UnblockExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, DLParser::RuleUnblockExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(64);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DLParser::QUOTED_STRING: {
        setState(61);
        match(DLParser::QUOTED_STRING);
        break;
      }

      case DLParser::CONST: {
        setState(62);
        match(DLParser::CONST);
        break;
      }

      case DLParser::IDENTIFIER: {
        setState(63);
        match(DLParser::IDENTIFIER);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(77);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<UnblockExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleUnblockExpression);
          setState(66);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(67);
          dynamic_cast<UnblockExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == DLParser::MULT_OPERATOR

          || _la == DLParser::DIV_OPERATOR)) {
            dynamic_cast<UnblockExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(68);
          unblockExpression(7);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<UnblockExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleUnblockExpression);
          setState(69);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(70);
          dynamic_cast<UnblockExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == DLParser::PLUS_OPERATOR

          || _la == DLParser::MINUS_OPERATOR)) {
            dynamic_cast<UnblockExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(71);
          unblockExpression(6);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<UnblockExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleUnblockExpression);
          setState(72);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(73);
          match(DLParser::OPEN_PAR_SYMBOL);
          setState(74);
          expressionList();
          setState(75);
          match(DLParser::CLOSE_PAR_SYMBOL);
          break;
        }

        } 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- TupleTypeContext ------------------------------------------------------------------

DLParser::TupleTypeContext::TupleTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::TupleTypeContext::OPEN_PAR_SYMBOL() {
  return getToken(DLParser::OPEN_PAR_SYMBOL, 0);
}

tree::TerminalNode* DLParser::TupleTypeContext::CLOSE_PAR_SYMBOL() {
  return getToken(DLParser::CLOSE_PAR_SYMBOL, 0);
}


size_t DLParser::TupleTypeContext::getRuleIndex() const {
  return DLParser::RuleTupleType;
}

void DLParser::TupleTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTupleType(this);
}

void DLParser::TupleTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTupleType(this);
}


antlrcpp::Any DLParser::TupleTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitTupleType(this);
  else
    return visitor->visitChildren(this);
}

DLParser::TupleTypeContext* DLParser::tupleType() {
  TupleTypeContext *_localctx = _tracker.createInstance<TupleTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, DLParser::RuleTupleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(DLParser::OPEN_PAR_SYMBOL);
    setState(83);
    match(DLParser::CLOSE_PAR_SYMBOL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

DLParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DLParser::TupleTypeContext* DLParser::TypeContext::tupleType() {
  return getRuleContext<DLParser::TupleTypeContext>(0);
}

tree::TerminalNode* DLParser::TypeContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}


size_t DLParser::TypeContext::getRuleIndex() const {
  return DLParser::RuleType;
}

void DLParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void DLParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any DLParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

DLParser::TypeContext* DLParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, DLParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DLParser::OPEN_PAR_SYMBOL: {
        enterOuterAlt(_localctx, 1);
        setState(85);
        tupleType();
        break;
      }

      case DLParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(86);
        match(DLParser::IDENTIFIER);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclContext ------------------------------------------------------------------

DLParser::VariableDeclContext::VariableDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::VariableDeclContext::LET_SYMBOL() {
  return getToken(DLParser::LET_SYMBOL, 0);
}

tree::TerminalNode* DLParser::VariableDeclContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

tree::TerminalNode* DLParser::VariableDeclContext::COLON_SYMBOL() {
  return getToken(DLParser::COLON_SYMBOL, 0);
}

DLParser::TypeContext* DLParser::VariableDeclContext::type() {
  return getRuleContext<DLParser::TypeContext>(0);
}

tree::TerminalNode* DLParser::VariableDeclContext::EQUAL_OPERATOR() {
  return getToken(DLParser::EQUAL_OPERATOR, 0);
}

DLParser::ExpressionStatementContext* DLParser::VariableDeclContext::expressionStatement() {
  return getRuleContext<DLParser::ExpressionStatementContext>(0);
}


size_t DLParser::VariableDeclContext::getRuleIndex() const {
  return DLParser::RuleVariableDecl;
}

void DLParser::VariableDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDecl(this);
}

void DLParser::VariableDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDecl(this);
}


antlrcpp::Any DLParser::VariableDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DLParserVisitor*>(visitor))
    return parserVisitor->visitVariableDecl(this);
  else
    return visitor->visitChildren(this);
}

DLParser::VariableDeclContext* DLParser::variableDecl() {
  VariableDeclContext *_localctx = _tracker.createInstance<VariableDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, DLParser::RuleVariableDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(89);
      match(DLParser::LET_SYMBOL);
      setState(90);
      match(DLParser::IDENTIFIER);
      setState(91);
      match(DLParser::COLON_SYMBOL);
      setState(92);
      type();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(93);
      match(DLParser::LET_SYMBOL);
      setState(94);
      match(DLParser::IDENTIFIER);
      setState(95);
      match(DLParser::COLON_SYMBOL);
      setState(96);
      type();
      setState(97);
      match(DLParser::EQUAL_OPERATOR);
      setState(98);
      expressionStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

DLParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DLParser::ParamContext::IDENTIFIER() {
  return getToken(DLParser::IDENTIFIER, 0);
}

tree::TerminalNode* DLParser::ParamContext::COLON_SYMBOL() {
  return getToken(DLParser::COLON_SYMBOL, 0);
}

DLParser::TypeContext* DLParser::ParamContext::type() {
  return getRuleContext<DLParser::TypeContext>(0);
}

